# Datalog-Interpreter

./: .gitignore  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.h  Database.h  DatalogProgram.h  EOFAutomaton.h  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.h  Interpreter.h  LeftParenthesisAutomaton.h  Lexer.h  LineCommentAutomaton.h  MultiplyAutomaton.h  Parameter.h  Parser.h  PeriodAutomaton.h  Predicate.h  QueriesAutomaton.h  QuestionMarkAutomaton.h  Relation.h  RightParenthesisAutomaton.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.h  Token.h  Tuple.h  UndefinedCharAutomaton.h  main.cpp  makefile
Lab1PassOffCases/1-90/: input3.txt
Lab3PassOffCases/3-100/: input5.txt  input9.txt
Lab4PassOffCases/4-100/: answer6.txt  input1.txt
Project2aPassOffCases/2-80/: input0.txt
Project2bPassOffCases/2-100/: answer0.txt
Project2bPassOffCases/2-80/: answer0.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer6.txt  answer7.txt
